--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!-- this file is there to serve as an example of how it will render, it's your playground ! -->
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="horizontal_core_style.css">
+<!--<link rel="stylesheet" href="vertical_core_style.css">-->
+<link rel="stylesheet" href="replace_profile_pictures.css">
+<link rel="stylesheet" href="one_by_one.css">
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root">
